--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@
         <div class="img-port"><img src="assets/port/port-result-3.png" alt=""></div>
       </div>
     </div>
+
+    <div class="tecno">
+      <li><img src="assets/logo/html.png" alt=""></li>
+      <li><img src="assets/logo/css.png" alt=""></li>
+      <li><img src="assets/logo/npm.png" alt=""></li>
+      <li><img src="assets/logo/sass.png" alt=""></li>
+      <li><img src="assets/logo/JS.png" alt=""></li>
+      <li><img src="assets/logo/node.png" alt=""></li>
+      <li><img src="assets/logo/react.png" alt=""></li>
+    </div>
   </section>
 
   <div class="shape-port2">
@@ -211,9 +221,9 @@
 
 </div>
 
-<div id="captura">
+<div id="captura" data-captura="container" class="active">
   <div class="captura">
-    <div class="fechar">
+    <div class="fechar" data-captura="fechar">
       <button>x</button>
     </div>
     <div class="titulo">
