--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Angel Dev</title>
-  <link rel="icon" href="/assets/4975logo.ico" type="image/x-icon">
+  <link rel="icon" href="assets/img/logo.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="svg-home"><img src="/assets/svg/shape-black.svg" alt=""></div>
@@ -114,12 +114,12 @@
     <div class="ideal">
       <h3>IDEAL PARA: </h3>
       <div class="ideal-card">
-          <div class="ideal-item"> <img src="assets/svg/startups.svg" alt=""></div> 
-          <div class="ideal-item"> <img src="assets/svg/academias.svg" alt=""></div> 
-          <div class="ideal-item"> <img src="assets/svg/autonomos.svg" alt=""></div> 
-          <div class="ideal-item"> <img src="assets/svg/freelancers.svg" alt=""></div> 
-          <div class="ideal-item"> <img src="assets/svg/negocios.svg" alt=""></div> 
-          <div class="ideal-item"> <img src="assets/svg/empreendedores.svg" alt=""></div> 
+          <div class="ideal-item"> <img src="assets/svg/startups.png" alt=""></div> 
+          <div class="ideal-item"> <img src="assets/svg/academias.png" alt=""></div> 
+          <div class="ideal-item"> <img src="assets/svg/autonomos.png" alt=""></div> 
+          <div class="ideal-item"> <img src="assets/svg/freelancers.png" alt=""></div> 
+          <div class="ideal-item"> <img src="assets/svg/negocios.png" alt=""></div> 
+          <div class="ideal-item"> <img src="assets/svg/empreendedores.png" alt=""></div> 
       </div>
     </div>
     
@@ -169,15 +169,19 @@
       <div class="img-contato"><img src="assets/svg/dev-contact.svg" alt=""></div>
     </div>
 
-    <form action="mailto:contato@angeldev.tech" method="post">
+    <form action="php/sendMail.php" method="POST" id="contatoForm">
       <div class="form">
         <div class="input-group">
-          <input type="text" name="nome" id="" placeholder="nome">
-          <input type="email" name="email" id="" placeholder="email">
+          <input type="text" name="name" id="name" placeholder="nome" required>
+          <span class="span"></span>
+
+          <input type="email" name="email" id="email" placeholder="email" required>
+          <span class="span"></span>
         </div>
-        <textarea name="message" id="" cols="30" rows="10" class="textarea" placeholder="mensagem"></textarea> 
+        <textarea name="menssage" id="menssage" cols="30" rows="10" class="textarea" placeholder="mensagem" required></textarea> 
+
       </div>
-      <div class="button"><button type="submit" value="submit"> TENHO INTERESSE</button></div>
+      <div class="button"><button type="submit" value="submit" id=button> TENHO INTERESSE</button></div>
     </form>
   </section>
   
@@ -237,7 +241,7 @@
         <h2>Sites a partir de R$500, 00</h2>
         <h3>Promoção válida até o natal!</h3>
         <div class="form">
-          <form action="mailto:contato@angeldev.tech" method="post">
+          <form action="" method="POST">
             <input type="email" value="" class="input1">
             <input type="submit" value="EU QUERO" class="input2">
           </form>
@@ -247,7 +251,21 @@
       </div>
     </div>
   </div>
-
+<style>
+.invalido
+{
+  background: rgba(238, 85, 68, 80%) !important;
+  border: solid 3px #e54 !important;
+}
+.erro
+{
+  color: #e54;
+  text-align: center;
+  padding:  10px 20px;
+  background: #fff;
+  border-radius: 10px;
+}
+</style>
   
 </div>
 
@@ -283,5 +301,32 @@
 </style>
 
 <script type="module" src="/js/app.js"></script>
+<script>
+  const contato = document.querySelector('#contatoForm');
+  const span = document.getElementsByClassName('span');
+  // console.log(contato.elements)
+  function handleKeyUp(event){
+    const target = event.target;
+    if(!target.checkValidity() ){
+      target.classList.add('invalido')
+      target.nextElementSibling.innerText = target.validationMessage;
+      target.nextElementSibling.classList.add('erro')
+    }else
+    {
+      target.classList.remove('invalido')
+      target.nextElementSibling.innerText = '';
+      target.nextElementSibling.classList.remove('erro');
+    }
+  }
+  contato.addEventListener('change', handleKeyUp)
+  
+  // button = document.querySelector('#button')
+
+  // function PreventSubmit(event){
+  //   event.preventDefault();
+
+  // }
+  // button.addEventListener('click', PreventSubmit)
+</script>
 </body>
 </html>
