--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       </div>
       <div class="text-action">
         <h2>Sites a partir de R$500, 00</h2>
-        <h3>Promoção válida até o natal!</h3>
+        <h3>Promoção válida até <strike> o natal! </strike>  <b style="text-transform: uppercase;"> Janeiro </b> </h3>
         <div class="form">
           <form action="" method="POST">
             <input type="email" value="" class="input1">
